# SyntaCLIP

./: .gitignore  README.md  main.py  pyproject.toml
examples/: download_cc12m_example.py  download_cc3m_example.py  free_inference.py  openclip_convert_clip.py  openclip_convert_synclip.py  openclip_convert_syntaclip.py  training.py  training_clip.py  training_syntaclip.py  visualize_distance.py
src/syntaclip/nn/: __init__.py  attention_layer.py  clip.py  criterion.py  dropout.py  functional.py  layernorm.py  layerscale.py  multihead_attention.py  syntactic_attention_layer.py  syntactic_distance_gate.py  syntactic_multihead_attention.py  syntactic_transformer.py  transformer.py
src/syntaclip/utils/: converter.py
src/syntaclip/utils/datasets/: __init__.py  cc12m.py  cc3m.py  dalidataset.py  downloader.py
tests/datasets/: cc3m_test.py
